<resources>
    <string name="app_name">Mobilny Edytor Zdjęć</string>
    <string name="me1">Wczytaj obraz</string>
    <string name="me2">Zrób zdjęcie</string>
    <string name="title_activity_panel">Edycja</string>
    <string name="action_settings">Autor</string>
    <string name="navMEZ">Mobilny edytor zdjęć</string>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="orange">#47ab26</color>
    <string name="title_activity_ustawienia">Ustawienia</string>
    <string name="title_activity_lista_filtrow">Lista metod</string>
    <string name="ustZaa">Metody zaawansowanie</string>
    <string name="brak">Limit metod został osiągnięty</string>
    <string name="negative">Negatyw</string>
    <string name="gray">Odcienie szarości</string>
    <string name="histo">Histogram</string>
    <string name="sepia">Sepia</string>
    <string name="obrotr">Obrót w prawo</string>
    <string name="obrotl">Obrót w lewo</string>
    <string name="odbicielp">Odbicie L-P</string>
    <string name="odbiciegd">Odbicie G-D</string>
    <string name="odbicielul">Odbicie lustrzane L-P</string>
    <string name="odbicielug">Odbicie lustrzane G-D</string>
    <string name="actiondelete">Usuń</string>
    <string name="title_activity_przycinanie">Przycinanie</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="mepo">Metody Podstawowe</string>
    <string name="wybierz_metode">Wybierz metode</string>
    <string name="mego">Metody Geometryczne</string>
    <string name="zapisz">Zapisz</string>
    <string name="obracanie">Obracanie</string>
    <string name="odbicie">Odbicie</string>
    <string name="odbicie_lustrzane">Odbicie lustrzane</string>
    <string name="ikona">Ikona</string>
    <string name="filtry">Filtry</string>
    <string name="medianowy">Medianowy</string>
    <string name="usredniajacy">Uśredniający</string>
    <string name="laplacea1">Laplace\'a</string>
    <string name="wyost">Wyostrzenie</string>
    <string name="uwyp">Uwypuklenie</string>
    <string name="przytnij">Przytnij</string>
    <string name="zapisywanie">Trwa zapisywanie\nTo może chwilę potrwać</string>
    <string name="cofnij">Cofnij</string>
    <string name="nie_mo_na_bardziej_przyci_zdj_cia">Nie można bardziej przyciąć zdjęcia !</string>
    <string name="ok">OK</string>
    <string name="dodaj_tekst">Dodaj tekst</string>
    <string name="title_activity_pisanie">pisanie</string>
    <string name="ok_pisz">/!\\ OK /!\\</string>
    <string name="dodawanie_tekstu">Dodawanie tekstu</string>

</resources>
