<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/mepo">
        <menu>
            <item
                android:id="@+id/nav_neg"
                android:title="@string/negative" />
            <item
                android:id="@+id/nav_sep"
                android:title="@string/sepia" />
            <item
                android:id="@+id/nav_sza"
                android:title="@string/gray" />
            <item
                android:id="@+id/nav_his"
                android:title="@string/histo" />
        </menu>
    </item>

    <item android:title="@string/dodawanie_tekstu">
        <menu>
            <item
                android:id="@+id/nav_text"
                android:title="@string/dodaj_tekst" />
        </menu>
    </item>

    <item android:title="@string/mego">
        <menu>
            <item
                android:id="@+id/nav_obr"
                android:title="@string/obracanie" />
            <item
                android:id="@+id/nav_odb"
                android:title="@string/odbicie" />
            <item
                android:id="@+id/nav_odl"
                android:title="@string/odbicie_lustrzane" />
            <item
                android:id="@+id/nav_prz"
                android:title="@string/title_activity_przycinanie" />
        </menu>
    </item>

    <item android:title="@string/filtry">
        <menu>
            <item
                android:id="@+id/nav_fi3x3me"
                android:title="@string/medianowy" />
            <item
                android:id="@+id/nav_fi3x3us"
                android:title="@string/usredniajacy" />
            <item
                android:id="@+id/nav_fi3x3la"
                android:title="@string/laplacea1" />
            <item
                android:id="@+id/nav_fi3x3wy"
                android:title="@string/wyost" />
            <item
                android:id="@+id/nav_fi3x3uw"
                android:title="@string/uwyp" />
        </menu>
    </item>

</menu>
