<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/orange"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wybierz_metode"
        android:gravity="center"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/odbicielul"
        android:onClick="odbicielul"
        android:id="@+id/Btnmp1"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/odbicielug"
        android:onClick="odbicielug"
        android:id="@+id/Btnmp2"
        android:layout_gravity="center_horizontal" />

</LinearLayout>