<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/orange"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wybierz_metode"
        android:gravity="center"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/lewo"
            android:contentDescription="@string/ikona" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/obrotl"
        android:onClick="obracaniel"
        android:id="@+id/Btnmp1"
        android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/prawo"
            android:contentDescription="@string/ikona" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/obrotr"
        android:onClick="obracaniep"
        android:id="@+id/Btnmp2"
        android:layout_gravity="center_horizontal" />

</LinearLayout>

</LinearLayout>